# mental-sync-cli

./: .gitmodules  README.md  main.py  pyproject.toml
.roo/rules/: 0-background.md  0-main.md  0-path.md  0-proposal.md  1-architecture.md  1-proposal.md  2-execution-model.md  PFMS.md  TODO.md  agent-core-base-prompt.md  anamnesis-and-context-manager.md  architecture-msc-v3.md  config-and-filesystem-layout.md  context.md  framework-compare.md  main.md  mental-sync-cli.md  minimal_tool.md  roadmap.md  subagent.md  whitepaper.md
.roo/skills/model-select-advice/: SKILL.md
.roo/skills/subagent-creator/: SKILL.md
docs/: tests_reconstruction_guide.md
docs/default-agent-identity/: Anamnesis.md  Key-Manager.md  Organizer.md
docs/plans/: 2026-02-03-oracle-design.md  2026-02-04-anamnesis-design.md  2026-02-04-og-bridge-design.md  2026-02-05-complete-task-tool-design.md  2026-02-05-message-reserialization-design.md  2026-02-05-native-tool-call-and-capability-detection.md  2026-02-05-subagent-and-sandbox-design.md
docs/ref-compare/: ref-codex.md  ref-kimi-cli.md  ref-openclaw.md
msc/core/: og.py
msc/core/anamnesis/: context.py  discover.py  metadata.py  parser.py  rag.py  session.py  types.py
msc/core/tools/: agent_ops.py  base.py  dispatcher.py  file_ops.py  meta_ops.py  sandbox_launcher.py  system_ops.py
msc/oracle/: __init__.py  config.py
msc/oracle/adapters/: anthropic.py  gemini.py  (+3 more)
ref/: index.md
rules/: bugs.md
scripts/: inspect_context.py
tests/core/: test_agent_ops.py  test_context.py  test_context_engine.py  test_discover.py  test_e2e_integration.py  test_full_chain_simulation.py  test_metadata.py  test_minimal_tools.py  test_og_session.py  test_oracle_integration.py  test_rag.py  test_sandbox_tools.py  test_security.py  test_session_lifecycle.py  test_session_persistence.py  test_subagent_blacklist_e2e.py  test_subagent_e2e.py  test_subagent_flow.py  test_subagent_orchestration.py  test_tools.py
tests/oracle/: test_integration.py  test_oracle.py  test_pfms_retry.py
(+4 files in other folders)
