[project]
name = "mental-sync-cli"
version = "0.1.0"
description = "Autonomous, self-bootstrapping agent runtime environment for Mental Smart Chain (MSC)."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "rich>=14.3.1",
    "typer>=0.21.1",
]
